# Alfy2

./: .env.example  .gitignore  ARCHITECTURE.md  NORTHSTAR.md  README.md  SETUP_LIVE.md  package.json  pnpm-lock.yaml  render.yaml  tsconfig.base.json  tsconfig.json  vercel.json
workers/: README.md  pyproject.toml
workers/alfy_workers/: __init__.py
workers/tests/: test_agent_council_contracts.py  test_agent_eval_contracts.py  test_agent_factory_contracts.py  test_agent_identity_contracts.py  test_agent_observability_contracts.py  test_ai_coe_contracts.py  test_ai_org_contracts.py  test_algorithm_overlay_contracts.py  test_anti_fragility_contracts.py  test_api_approval_contracts.py  test_asset_checklist_contracts.py  test_assets_contracts.py  test_audience_intel_contracts.py  test_board_packet_contracts.py  test_brain_hands_contracts.py  test_brand_dna_contracts.py  test_briefings_contracts.py  test_build_from_brainstorm_contracts.py  test_build_spine_contracts.py  test_builder_mode_contracts.py  test_business_contracts.py  test_business_profile_contracts.py  test_business_simulation_contracts.py  test_campaign_contracts.py  test_capital_allocation_contracts.py  test_capital_allocator_contracts.py  test_capital_board_contracts.py  test_capital_engine_contracts.py  test_chief_of_staff_contracts.py  test_cognitive_offload_contracts.py  test_commercialization_contracts.py  test_compounding_contracts.py  test_connections_contracts.py  test_consequence_horizon_contracts.py  test_constitution_contracts.py  test_content_factory_contracts.py  test_contracts.py  (+102 more)
(+701 files in other folders)
