[project]
name = "alfy-workers"
version = "0.0.0"
description = "Alfy2 Python agent workers. One replaceable subpackage per agent family."
requires-python = ">=3.12"
dependencies = [
    # Pinned in Phase 1. Pydantic for contract mirrors; a lightweight HTTP server for the run endpoint.
    # "pydantic>=2",
]

[tool.uv]
# Managed with uv. Run: `uv sync` inside workers/.

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
